netcfg (1.59) UNRELEASED; urgency=low

  * Modify the DHCP configuration process to write out elements of
    resolv.conf that the user has entered manually, because the DHCP server
    didn't supply them.  Closes: #362029.

 -- Matt Palmer <mpalmer@debian.org>  Sat, 01 Jan 2011 19:35:01 +1100

netcfg (1.58) unstable; urgency=low

  [ Updated translations ]
  * Lao (lo.po) by Anousak Souphavanh
  * Northern Sami (se.po) by Børre Gaup
  * Sinhala (si.po) by Danishka Navin

 -- Otavio Salvador <otavio@debian.org>  Fri, 24 Dec 2010 20:06:41 -0200

netcfg (1.57) unstable; urgency=low

  [ Otavio Salvador ]
  * Don't duplicate localhost definition for IPv4 and IPv6. Closes:
    #595107.

  [ Petter Reinholdtsen ]
  * Log detected link status to make it possible to see if link
    detection work properly or not.

  [ Otavio Salvador ]
  * netcfg: do not provide an empty /etc/dhcp3 dir.

  [ Updated translations ]
  * Bengali (bn.po) by Israt Jahan
  * Catalan (ca.po) by Jordi Mallach
  * Danish (da.po) by Anders Jenbo
  * Persian (fa.po) by Behrad Eslamifar
  * Icelandic (is.po) by Sveinn  Felli
  * Kazakh (kk.po) by Baurzhan Muftakhidinov
  * Romanian (ro.po) by Andrei Popescu

 -- Otavio Salvador <otavio@debian.org>  Fri, 12 Nov 2010 14:27:38 -0200

netcfg (1.56) unstable; urgency=low

  [ Aurelien Jarno ]
  * Add sparc64 to the architectures list.

  [ Updated translations ]
  * Asturian (ast.po) by maacub
  * Bulgarian (bg.po) by Damyan Ivanov

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 27 Aug 2010 19:35:49 +0200

netcfg (1.55) unstable; urgency=low

  [ Jeremie Koenig ]
  * More fixes for Hurd support, including network device detection
    (closes: 588761).

  [ Aurelien Jarno ]
  * dhcp: ask udhcpc for dns and not namesrv.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 06 Aug 2010 17:54:02 +0200

netcfg (1.54) unstable; urgency=low

  [ Samuel Thibault ]
  * Fixes for Hurd support.

  [ Updated translations ]
  * Belarusian (be.po) by Viktar Siarheichyk