@@ -3,8 +3,10 @@ netcfg (1.59) UNRELEASED; urgency=low
   * Modify the DHCP configuration process to write out elements of
     resolv.conf that the user has entered manually, because the DHCP server
     didn't supply them.  Closes: #362029.
+  * Add an ethtool-lite Makefile target, to assist people in building a
+    standalone ethtool-lite for debugging purposes.  Closes: #608452.
 
- -- Matt Palmer <mpalmer@debian.org>  Sat, 01 Jan 2011 19:35:01 +1100
+ -- Matt Palmer <mpalmer@debian.org>  Sat, 01 Jan 2011 20:50:22 +1100
 
 netcfg (1.58) unstable; urgency=low
 
